update documentation on how to set up the learning module